release: 维护 Minecraft 1.21.1 版本 3.0.0